logs/run/large_code-run.log
newSource1.scala:1: error: Could not write class BigEnoughToFail because it exceeds JVM code size limits. Method code too large!
class BigEnoughToFail {
      ^
